--- a/src/namespace.digital/CMakeLists.txt
+++ b/src/namespace.digital/CMakeLists.txt
@@ -1,1 +1,7 @@
 add_subdirectory(cppserver)
+
+# Add tests (if supposed to)
+if (CPPSERVER_BUILD_TESTS)
+    enable_testing()
+    add_subdirectory(test)
+endif()
