--- a/src/namespace.digital/cppserver/CMakeLists.txt
+++ b/src/namespace.digital/cppserver/CMakeLists.txt
@@ -1,4 +1,18 @@
 
-# Cppserver lib
+# add components
 add_subdirectory(configuration)
 add_subdirectory(router)
+
+# add server class
+target_sources(
+    ${TARGET}
+    PUBLIC
+        FILE_SET
+            HEADERS
+            BASE_DIRS ${CPPSERVER_BASE_DIR}
+            FILES
+                server.hpp
+
+    PRIVATE
+        server.cpp
+)
