--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,7 +1,8 @@
-add_subdirectory(cppserver)
-
 # Add tests (if supposed to)
 if (CPPSERVER_BUILD_TESTS)
     enable_testing()
-    add_subdirectory(test)
+    add_subdirectory(namespace.digital)
 endif()
+
+
+
