--- a/src/test/namespace.digital/CMakeLists.txt
+++ b/src/test/namespace.digital/CMakeLists.txt
@@ -1,7 +1,6 @@
-include(CMakeHelper.cmake)
 
 if (NOT TARGET test)
     add_custom_target(test)
 endif()
 
-add_subdirectory(server)
+add_subdirectory(cppserver)
