--- a/example/server/basic/CMakeLists.txt
+++ b/example/server/basic/CMakeLists.txt
@@ -5,7 +5,7 @@ set(TARGET testlib)
 add_executable(${TARGET})
 
 # Setup example
-target_link_libraries(${TARGET} PRIVATE namespace.digital-cppserver)
+target_link_libraries(${TARGET} PRIVATE namespace.digital::cppserver)
 
 set_target_properties(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CPPSERVER_BINARY_DIR})
 
