Some test validation for config ini

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ vendor/build/macos_arm64/_source/
 vendor/build/raspberry-pi-os_armv7/_build/
 vendor/build/raspberry-pi-os_armv7/_install/
 vendor/build/raspberry-pi-os_armv7/_source/
+vendor/build/raspberry-pi-os_armv8/script/
 
 example/certificates/out/
 etc/
