--- a/src/test/namespace.digital/cppserver/configuration/CMakeLists.txt
+++ b/src/test/namespace.digital/cppserver/configuration/CMakeLists.txt
@@ -1,7 +1,7 @@
 include(../../../CMakeHelper.cmake)
 
 add_test_executable(
-    TEST_NAME server
+    TEST_NAME ini
     SOURCES
         driver/ini_test.cpp
     INCLUDES
