--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,6 +96,8 @@
     "variant": "cpp",
     "vector": "cpp",
     "algorithm": "cpp",
-    "*.ipp": "cpp"
+    "*.ipp": "cpp",
+    "__std_stream": "cpp",
+    "filesystem": "cpp"
   }
 }
