--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -44,3 +44,63 @@ endif()
 endif()
 
 add_subdirectory(namespace.digital)
+
+
+
+########################################################################################################################
+# Install                                                                                                              #
+########################################################################################################################
+
+include(CMakePackageConfigHelpers)
+
+
+write_basic_package_version_file(
+    cppserver-config-version.cmake
+    VERSION ${PACKAGE_VERSION}
+    COMPATIBILITY AnyNewerVersion
+)
+
+configure_file(cppserver-config.cmake.in cppserver-config.cmake @ONLY)
+
+# install(FILES "cppserver-config.cmake" "${CMAKE_CURRENT_BINARY_DIR}/cppserver-config-version.cmake"
+# DESTINATION lib/cmake/cppserver)
+
+install(
+    FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/cppserver-config.cmake
+        ${CMAKE_CURRENT_BINARY_DIR}/cppserver-config-version.cmake
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/cppserver
+)
+
+set(SPDLOG_INSTALL ON)
+
+install(TARGETS ${TARGET} 
+        EXPORT cppserver-targets
+        FILE_SET HEADERS
+        LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/lib
+        LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/lib
+        LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin
+        )
+
+
+
+# install(EXPORT cppserverTargets
+#         FILE cppserverTargets.cmake
+#         NAMESPACE namespace.digital::
+#         DESTINATION lib/cmake/cppserver)
+
+
+        install(
+          EXPORT cppserver-targets
+          FILE cppserver-targets.cmake
+          NAMESPACE namespace.digital::
+          DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/cppserver
+      )
+
+
+# install(
+#     EXPORT cppserver-targets
+#     FILE cppserver-targets.cmake
+#     NAMESPACE namespace.digital::
+#     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/cppserver
+# )
