added package config

--- a/example/config/CMakeLists.txt
+++ b/example/config/CMakeLists.txt
@@ -5,7 +5,7 @@ set(TARGET ini_config)
 add_executable(${TARGET})
 
 # Setup example
-target_link_libraries(${TARGET} PRIVATE namespace.digital::cppserver)
+target_link_libraries(${TARGET} PRIVATE cppserver)
 
 set_target_properties(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CPPSERVER_BINARY_DIR})
 
