--- a/src/test/namespace.digital/cppserver/configuration/CMakeLists.txt
+++ b/src/test/namespace.digital/cppserver/configuration/CMakeLists.txt
@@ -7,5 +7,5 @@ add_test_executable(
     INCLUDES
         ../../vendor/third_party
     LIBRARIES
-        namespace.digital-cppserver
+        cppserver
 )
