Added D_LIBCPP_HARDENING_MODE flag llvm build

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 _build/
 _cache/
-vendor/_cache/
-vendor/build/macos_arm64/_build/
-vendor/build/macos_arm64/_install/
-vendor/build/macos_arm64/_source/
-vendor/build/raspberry-pi-os_armv7/_build/
-vendor/build/raspberry-pi-os_armv7/_install/
-vendor/build/raspberry-pi-os_armv7/_source/
-vendor/build/raspberry-pi-os_armv8/script/
+deps/_cache/
+deps/build/macos_arm64/_build/
+deps/build/macos_arm64/_install/
+deps/build/macos_arm64/_source/
+deps/build/raspberry-pi-os_armv7/_build/
+deps/build/raspberry-pi-os_armv7/_install/
+deps/build/raspberry-pi-os_armv7/_source/
+deps/build/raspberry-pi-os_armv8/script/
 lib/
 
 example/certificates/out/
