--- a/src/main/cppserver-config.cmake.in
+++ b/src/main/cppserver-config.cmake.in
@@ -1,8 +1,8 @@
 include(CMakeFindDependencyMacro)
 set(cppserver_FOUND 1)
-set(_INSTALL_DIR deps/cppserver/vendor/build/macos_arm64/_install)
+set(_INSTALL_DIR ${CPPSERVER_ROOT_DIR}/deps/build/macos_arm64/_install)
 set(BOOST_ROOT_DIR ${_INSTALL_DIR}/boost)
-set(CPPSERVER_ROOT_DIR deps/cppserver/out) #change to ffmpeg if not static deps
+set(CPPSERVER_ROOT_DIR ${CPPSERVER_ROOT_DIR}/out) #change to ffmpeg if not static deps
 
 if (NOT "${CPPSERVER_ROOT_DIR}" STREQUAL "")
   list(APPEND CMAKE_PREFIX_PATH ${CPPSERVER_ROOT_DIR})
