--- a/src/main/namespace.digital/cppserver/router/CMakeLists.txt
+++ b/src/main/namespace.digital/cppserver/router/CMakeLists.txt
@@ -12,14 +12,19 @@ target_sources(
 				request.hpp
 				header.hpp
 				response.hpp
+				listener.hpp
 				http_worker.hpp
 				ws_worker.hpp
 				ws_handler.hpp
 				ws_context.hpp
+				mime_type.hpp
+
 		PRIVATE
 			attribute.cpp
 			attributes.cpp
 			router.cpp
 			route.cpp
+			listener.cpp
 			http_worker.cpp
+	
 )
